--- a/5-websockets/src/views/realTimeProducts.hbs
+++ b/5-websockets/src/views/realTimeProducts.hbs
@@ -8,103 +8,85 @@
   <div class="row">
     <div class="container">
       <div class="row">
-        <div class="col-9 my-4">
-          {{#if products}}
-            <div class="row w-100">
-              {{#each products}}
-                <div class="col-3 my-4">
-                  <div class="text-center">
-                    <h5 class="h5">{{title}}</h5>
+        {{! LIST OF PRODUCTS }}
+        <div class="col-9">
+          <div class="container">
+            <div div class="row" id="products-container">
+            </div>
+          </div>
 
-                    <div class="col">
-                      <div>
-                        <img
-                          class="thumb img-thumbnail"
-                          src="{{thumbnail}}"
-                          alt="{{title}}"
-                        />
-                      </div>
-                      <div>
-                        <ul class="list-group list-group-flush">
-                          <li
-                            class="list-group-item list-group-item-action"
-                          ><strong>Description:</strong><br />
-                            {{description}}</li>
-                          <li class="list-group-item list-group-item-action">
-                            {{category}}</li>
-                          <li
-                            class="list-group-item list-group-item-action"
-                          ><strong>Code:</strong>
-                            #{{code}}</li>
-                          <li
-                            class="list-group-item list-group-item-action"
-                          ><strong>Price:</strong> ${{price}}</li>
-                          <li class="list-group-item list-group-item-action">
-                            {{stock}}
-                            unidades</li>
-                        </ul>
-                      </div>
-                      <div>
-                        <button
-                          data-id={{id}}
-                          class="btn btn-danger my-3 btn-delete-product"
-                        >X</button>
-                      </div>
-                    </div>
-                  </div></div>
-              {{/each}}
-            </div>
-          {{else}}
-            <div class="row w-100 my-4">
-              <p>Not products found 🤷‍♂️</p>
-            </div>
-          {{/if}}
         </div>
-
+        {{! FORM PRODUCTS }}
         <div class="col-3">
           <div class="row">
-            <div class="container mx-auto my-5">
+            <div class="container mx-auto my-2">
+              <h2 class="bg-dark text-white p-2 text-center">ADD A PRODUCT</h2>
               <form
+                id="productForm"
                 enctype="multipart/form-data"
                 method="post"
-                name="addProduct"
-                id="addProduct"
-                action="/api/products"
               >
-                <fieldset>
-                  <legend class="bg-dark text-white p-2 text-center">Add a
-                    product</legend>
-                  <div class="form-group">
-                    <label for="product_title">Product title</label>
+                <div class="form-group row mt-2">
+                  <div class="col">
+                    <label class="form-label" for="title">Title*</label>
                     <input
+                      class="form-control"
                       type="text"
-                      class="form-control"
-                      id="product_title"
-                      placeholder="Title"
+                      name="title"
+                      id="title"
                       autofocus
                       required
                     />
                   </div>
+                  <div class="col">
+                    <label for="state">Status</label>
+                    <select name="status" id="status" class="form-control">
+                      <option value="1">Active</option>
+                      <option value="0">Inactive</option>
+                      autofocus required
+                    </select>
 
-                  <div class="form-group">
-                    <label for="product_code">Product code</label>
+                  </div>
+                </div>
+                <div class="form-group row mt-2">
+                  <div class="col">
+                    <label class="form-label" for="price">Price*</label>
                     <input
-                      type="number"
-                      name="code"
                       class="form-control"
-                      id="product_code"
-                      placeholder="Code"
+                      type="text"
+                      name="price"
+                      id="price"
                       autofocus
                       required
                     />
                   </div>
-                  <div class="form-group">
-                    <label for="product_code">Product category</label>
-                    <select
-                      class="form-select"
-                      name="category"
-                      id="product_category"
-                    >
+                  <div class="col">
+                    <label class="form-label" for="code">Code*</label>
+                    <input
+                      class="form-control"
+                      type="text"
+                      name="code"
+                      id="code"
+                      autofocus
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="form-group row mt-2">
+                  <div class="col">
+                    <label class="form-label" for="stock">Stock*</label>
+                    <input
+                      class="form-control"
+                      type="text"
+                      name="stock"
+                      id="stock"
+                      autofocus
+                      required
+                    />
+                  </div>
+                  <div class="col">
+                    <label class="form-label" for="category">Category*</label>
+                    <select class="form-select" name="category" id="category">
                       <option value="Galletitas">Galletitas</option>
                       <option value="Gaseosas">Gaseosas</option>
                       <option value="Bebidas con alcohol">Bebidas c/alcohol</option>
@@ -112,76 +94,59 @@
                       <option value="otro" selected>Otro</option>
                     </select>
                   </div>
-                  <div class="form-group">
-                    <label for="product_price">Product price</label>
-                    <input
-                      type="number"
-                      name="price"
+                </div>
+                <div class="form-group row mt-2">
+                  <div class="col">
+                    <label
+                      class="form-label"
+                      for="description"
+                    >Description*</label>
+                    <textarea
                       class="form-control"
-                      id="product_price"
-                      placeholder="Price"
+                      type="text"
+                      name="description"
+                      id="description"
+                      autofocus
+                      required
+                    ></textarea>
+                  </div>
+                </div>
+                <div class="form-group row mt-2">
+                  <div class="col">
+                    <label for="thumbnails">Thumbnails*</label>
+                    <input
+                      type="file"
+                      multiple="true"
+                      class="form-control"
+                      id="thumbnails"
+                      name="thumbnails"
+                      multiple
                       autofocus
                       required
                     />
                   </div>
-                  <div class="form-group">
-                    <label for="product_stock">Product stock</label>
+                </div>
+                <div class="form-group row mt-3">
+                  <div class="col">
                     <input
-                      type="number"
-                      name="stock"
-                      class="form-control"
-                      id="product_stock"
-                      placeholder="Stock"
-                      autofocus
-                      required
+                      type="submit"
+                      value="+ product"
+                      class="btn btn-dark w-100 font-weight-bold"
+                      id="submitForm"
                     />
-                    <div>
-                      <div class="form-group">
-                        <label for="product_thumb">Thumbnails:</label>
-                        <input
-                          type="file"
-                          name={{thumbnails}}
-                          class="form-control"
-                          form="addProduct"
-                          id="product_thumbnails"
-                          multiple
-                          autofocus
-                        />
-                      </div>
-                      <div class="form-group">
-                        <label for="product_description">Description:</label>
-                        <textarea
-                          name="description"
-                          class="form-control"
-                          id="product_description"
-                          cols="30"
-                          rows="5"
-                          placeholder="Description"
-                          autofocus
-                          required
-                        ></textarea>
-
-                      </div>
-                      <div class="form-group my-3 text-center">
-                        <input
-                          class="btn btn-dark w-100 font-weight-bold"
-                          type="submit"
-                          value="+ product"
-                        />
-                      </div>
-
-                    </div>
                   </div>
-                </fieldset>
-
+                </div>
+                <div class="m-3" id="result"></div>
               </form>
             </div>
           </div>
-
         </div>
+
       </div>
+
     </div>
   </div>
+
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
