--- a/5-websockets/src/views/realTimeProducts.hbs
+++ b/5-websockets/src/views/realTimeProducts.hbs
@@ -5,9 +5,9 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="container">
-      <div class="row">
+  <div class="row m-2">
+    <div class="container ">
+      <div class="row my-3">
         {{! LIST OF PRODUCTS }}
         <div class="col-9">
           <div class="container">
