--- a/7-segunda_pre_entrega/src/views/product.hbs
+++ b/7-segunda_pre_entrega/src/views/product.hbs
@@ -1,8 +1,36 @@
-<div class="product-details">
-  <img src="{{this.thumbnails}}" alt="{{this.title}}" />
-  <h1>{{this.title}}</h1>
-  <p>{{this.description}}</p>
-  <p>Price: ${{this.price}}</p>
-  <button class="btn btn-primary" onclick="addToCart('{{this._id}}')">Add to
-    Cart</button>
+<div class="card my-3" style="width: 18rem;">
+  <img
+    class="card-img-top"
+    src="{{product.thumbnails}}"
+    alt="{{product.title}}"
+    style="width: 300px;"
+  />
+  <div class="card-body text-center">
+    <h5 class="card-title">{{product.title}}</h5>
+    <p class="card-text"><strong>Description:</strong><br />
+      {{product.description}}</p>
+
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item list-group-item-action">
+        {{product.category}}
+      </li>
+      <li class="list-group-item list-group-item-action">
+        <strong>Code:</strong>
+        #{{product.code}}
+      </li>
+      <li class="list-group-item list-group-item-action">
+        <strong>Price:</strong>
+        ${{product.price}}
+      </li>
+      <li class="list-group-item list-group-item-action">
+        {{product.stock}}
+        unidades
+      </li>
+    </ul>
+  </div>
+    <a
+      href="#"
+      class="btn btn-warning"
+      onclick="addToCart('{{product._id}}')"
+    >Add to Cart</a>
 </div>
