--- a/7-segunda_pre_entrega/src/views/products.hbs
+++ b/7-segunda_pre_entrega/src/views/products.hbs
@@ -1,83 +1,59 @@
-<div class="container">
-  <div class="row">
-    <div class="jumbotron text-left border bg-warning">
-      <h3 class="p-3">{{nameShopping}} - List of products</h3>
-    </div>
-  </div>
+<div class="row">
+  <div class="container">
+    <div class="row">
+      <div class="my-4 w-100">
+        {{#if products}}
+          <div class="row mx-auto">
+            {{#each products}}
 
-  <div class="row">
-    <div class="container">
-      <div class="row">
-        <div class="my-4 w-100">
-          {{#if products}}
-            <div class="row">
-              {{#each products}}
-                <div class="col-2 my-4">
-                  <div class="text-center">
-                    <a href="/product/{{this._id}}">
-                      <h5 class="h5">
-                        {{this.title}}
-                      </h5>
-                    </a>
-                    <div class="col">
-                      <div>
-                        <img
-                          class="thumb img-thumbnail"
-                          src="{{this.thumbnails}}"
-                          alt="{{this.title}}"
-                        />
-                      </div>
-                      <div>
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item list-group-item-action">
-                            <strong>Description:</strong><br />
-                            {{this.description}}
-                          </li>
-                          <li class="list-group-item list-group-item-action">
-                            {{this.category}}
-                          </li>
-                          <li class="list-group-item list-group-item-action">
-                            <strong>Code:</strong>
-                            #{{this.code}}
-                          </li>
-                          <li class="list-group-item list-group-item-action">
-                            <strong>Price:</strong>
-                            ${{this.price}}
-                          </li>
-                          <li class="list-group-item list-group-item-action">
-                            {{this.stock}}
-                            unidades
-                          </li>
-                        </ul>
-                      </div>
-                      <div>
-                        <input
-                          class="btn btn-danger my-3"
-                          type="button"
-                          value="X"
-                        />
-                      </div>
-                    </div>
-                  </div>
+              <div class="card m-2" style="width: 15rem;">
+                <img
+                  class="card-img-top"
+                  src="{{this.thumbnails}}"
+                  alt="{{this.title}}"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title"><a
+                      href="/product/{{this._id}}"
+                    >{{this.title}}</a></h5>
+                  <p class="card-text">{{this.description}}</p>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item list-group-item-action">
+                      {{this.category}}
+                    </li>
+                    <li class="list-group-item list-group-item-action">
+                      <strong>Code:</strong>
+                      #{{this.code}}
+                    </li>
+                    <li class="list-group-item list-group-item-action">
+                      <strong>Price:</strong>
+                      ${{this.price}}
+                    </li>
+                    <li class="list-group-item list-group-item-action">
+                      {{this.stock}}
+                      unidades
+                    </li>
+                  </ul>
+                  <a href="#" class="btn btn-danger">Delete</a>
                 </div>
-              {{/each}}
-            </div>
-            <div class="d-flex justify-content-end gap-2">
-              <a
-                href="/products?page={{prevPage}}"
-                class="btn btn-warning"
-              >Prev</a>
-              <a
-                href="/products?page={{nextPage}}"
-                class="btn btn-warning"
-              >Next</a>
-            </div>
-          {{else}}
-            <div class="row w-100 my-4">
-              <p>No products found 🤷‍♂️</p>
-            </div>
-          {{/if}}
-        </div>
+              </div>
+            {{/each}}
+          </div>
+          <div class="d-flex justify-content-end gap-2 my-3">
+            <a
+              href="/products?page={{prevPage}}"
+              class="btn btn-warning"
+            >Prev</a>
+            <a
+              href="/products?page={{nextPage}}"
+              class="btn btn-warning"
+            >Next</a>
+          </div>
+        {{else}}
+          <div class="row w-100 my-4">
+            <p>No products found 🤷‍♂️</p>
+          </div>
+        {{/if}}
       </div>
     </div>
   </div>
