--- a/7-segunda_pre_entrega/src/views/layout/main.hbs
+++ b/7-segunda_pre_entrega/src/views/layout/main.hbs
@@ -12,8 +12,16 @@
     <title>{{title}} - {{nameShopping}}</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="jumbotron text-left border bg-warning">
+          <h3 class="p-3">{{nameShopping}} - List of products</h3>
+        </div>
+      </div>
 
-    {{{body}}}
+      {{{body}}}
+      
+    </div>
 
   </body>
 </html>
