--- a/7-segunda_pre_entrega/src/public/css/index.css
+++ b/7-segunda_pre_entrega/src/public/css/index.css
@@ -1,5 +1,12 @@
-img{
-    max-height: 200px;
-    width: auto;
-    object-fit:scale-down
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: #343433;
+}
+img {
+  max-height: 200px;
+  width: auto;
+  object-fit: scale-down;
 }
