--- a/12-tercera_pre_entrega/src/views/purchase.hbs
+++ b/12-tercera_pre_entrega/src/views/purchase.hbs
@@ -3,22 +3,45 @@
 
 {{#if order.error}}
   <h4>Some products could not be purchased:</h4>
-  <ul>
-    {{#each order.unsuccessfulProducts}}
-      <li>{{this}}</li>
-    {{/each}}
-  </ul>
+  <table class="table w-75">
+    <thead>
+      <tr>
+        <th scope="col">Title</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each order.unsuccessfulProducts}}
+        <tr class="align-middle">
+          <td>{{product.title}}</td>
+        </tr>
+      {{/each}}
+
+    </tbody>
+  </table>
 {{else}}
   <h4>All products were successfully purchased!</h4>
 {{/if}}
 
 <h5>Details of order:</h5>
-<ul>
-  {{#each order.successProducts}}
-    <li>Product: {{product.title}}</li>
-    <li>Quantity: {{quantity}}</li>
-  {{/each}}
-</ul>
+<table class="table w-75">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Quantity</th>
+    </tr>
+  </thead>
+  <tbody>
+
+    {{#each order.successProducts}}
+      <tr class="align-middle">
+        <td><a href="/product/{{product._id}}">{{product.title}}</a></td>
+        <td>{{quantity}}</td>
+      </tr>
+    {{/each}}
+
+  </tbody>
+</table>
+
 <div class="my-3">
   <div class="d-flex flex-column align-items-end">
     <h3 class="text-muted">Total amount:</h3>
