--- a/12-tercera_pre_entrega/src/views/products.hbs
+++ b/12-tercera_pre_entrega/src/views/products.hbs
@@ -1,15 +1,13 @@
 <div class="row">
   <div class="container">
-    {{! FORM PRODUCTS }}
-    <div class="col-xl">
-      <div class="row">
-        <div class="container mx-auto my-2">
-          {{#if isAdmin}}
-            <div class="welcome-message">
-              <h5>
-                {{messageUser}}
-              </h5>
-            </div>
+    <div class="welcome-message pt-3">
+      <h5>{{messageUser}}</h5>
+    </div>
+    {{#if isAdmin}}
+      {{! FORM PRODUCTS }}
+      <div class="col-xl">
+        <div class="row">
+          <div class="container mx-auto my-2">
             <h2 class="bg-dark text-white p-2 text-center">ADD A PRODUCT</h2>
             <form id="productForm" enctype="multipart/form-data" method="post">
               <div class="form-group row mt-2">
@@ -73,17 +71,16 @@
               </div>
               <div class="m-3" id="result"></div>
             </form>
-          {{/if}}
+          </div>
         </div>
       </div>
-    </div>
+    {{/if}}
     {{! LIST PRODUCTS }}
     <div class="row">
       <div class="my-4 w-100">
         {{#if products}}
           <div class="row mx-auto">
             {{#each products}}
-
               <div class="card m-2" style="width: 15rem;">
                 <a href="/product/{{this._id}}"><img class="card-img-top" src="{{this.thumbnails}}" alt="{{this.title}}" /></a>
                 <div class="card-body text-center">
@@ -107,11 +104,13 @@
                     </li>
                   </ul>
                   {{! buttons }}
-                  {{#if isAdmin}}
-                    <a href="#" id="deleteButton" class="btn btn-danger my-2" data-id="{{this._id}}" onclick="handleDeleteButtonClick(event)">Delete</a>
-                  {{/if}}
-                  <a href="/product/{{this._id}}" class="btn btn-success my-2">View</a>
+                  <div>
+                    <a href="/product/{{this._id}}" class="btn btn-success my-2">View</a>
 
+                    {{#if ../isAdmin}}
+                    <a href="#" id="deleteButton" class="btn btn-danger my-2" data-id="{{this._id}}" onclick="handleDeleteButtonClick(event)">Delete</a>
+                    {{/if}}
+                  </div>
                 </div>
               </div>
             {{/each}}
