--- a/12-tercera_pre_entrega/src/views/layout/main.hbs
+++ b/12-tercera_pre_entrega/src/views/layout/main.hbs
@@ -5,16 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
 
     {{! Toastr CSS }}
-    <link
-      rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css"
-    />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/index.css" />
@@ -30,40 +24,32 @@
             <!-- Menu -->
             <div class="d-inline-flex align-items-center p-2">
               <div>
-                <figure><img src="/images/logo.png" alt="Logo de una pipa" style="width: 50px"></figure>
+                <figure><img src="/images/logo.png" alt="Logo de una pipa" style="width: 50px" /></figure>
               </div>
               <div>
-              <h3 class="">
-                <a href="/products">{{nameShopping}} - {{sectionPage}}</a>
-              </h3>
+                <h3 class="">
+                  <a href="/products">{{nameShopping}} - {{sectionPage}}</a>
+                </h3>
               </div>
             </div>
 
             <div class="d-flex mx-5 gap-3">
-
               {{#if sessionUser}}
                 <!-- Profile -->
                 <div class="dflex">
-                  <h5><a href="/profile"><i
-                        class="fa-solid fa-user"
-                        style="color: #000000;"
-                      ></i></a></h5>
+                  <h5><a href="/profile"><i class="fa-solid fa-user" style="color: #000000;"></i></a></h5>
                 </div>
 
                 <!-- Cart -->
-                <div class="d-flex align-items-center">
-                  <h5 class="mx-2"><a href="/cart"><i
-                        class="fa-solid fa-cart-shopping"
-                        style="color: #000000;"
-                      ></i></a></h5>
-                </div>
+                {{#if isNotAdmin}}
+                  <div class="d-flex align-items-center">
+                    <h5 class="mx-2"><a href="/cart"><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a></h5>
+                  </div>
+                {{/if}}
 
                 <!-- Logout -->
                 <div class="dflex">
-                  <h5><a href="/logout" id="logoutButton"><i
-                        class="fa-solid fa-arrow-right-from-bracket"
-                        style="color: #000000;"
-                      ></i></a></h5>
+                  <h5><a href="/logout" id="logoutButton"><i class="fa-solid fa-arrow-right-from-bracket" style="color: #000000;"></i></a></h5>
                 </div>
               {{else}}
 
@@ -90,19 +76,10 @@
     {{! Main JS }}
     <script src="/js/main.js"></script>
     <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/af2dede480.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/af2dede480.js" crossorigin="anonymous"></script>
     {{! Toastr  }}
-    <script
-      src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"
-    ></script>
-    <script
-      src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"
-    ></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
   </body>
 </html>
