--- a/12-tercera_pre_entrega/src/views/purchase.hbs
+++ b/12-tercera_pre_entrega/src/views/purchase.hbs
@@ -1,53 +1,65 @@
 <h1 class="my-4">{{title}}</h1>
 <h2>Purchase completed!</h2>
 
-{{#if order.error}}
-  <h4>Some products could not be purchased:</h4>
-  <table class="table w-75">
-    <thead>
-      <tr>
-        <th scope="col">Title</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each order.unsuccessfulProducts}}
-        <tr class="align-middle">
-          <td>{{product.title}}</td>
-        </tr>
-      {{/each}}
+<div class="container">
+  <div class="row">
+    <div class="col-9 py-3">
+      {{#if order.productsOutStock}}
+        <h5>Some products could not be purchased:</h5>
+        <table class="table w-100">
+          <thead>
+            <tr>
+              <th scope="col">Title</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#each order.productsOutStock}}
+              <tr class="align-middle">
+                <td>{{product.title}}</td>
+              </tr>
+            {{/each}}
 
-    </tbody>
-  </table>
-{{else}}
-  <h4>All products were successfully purchased!</h4>
-{{/if}}
+          </tbody>
+        </table>
+      {{else}}
+        <h4>All products were successfully purchased!</h4>
+      {{/if}}
 
-<h5>Details of order:</h5>
-<table class="table w-75">
-  <thead>
-    <tr>
-      <th scope="col">Title</th>
-      <th scope="col">Quantity</th>
-    </tr>
-  </thead>
-  <tbody>
+      <div class="my-5">
+        <h5>Details of order:</h5>
+        <table class="table w-100">
+          <thead>
+            <tr>
+              <th scope="col">Title</th>
+              <th scope="col">Quantity</th>
+              <th scope="col">Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#each order.successProducts}}
+              <tr class="align-middle">
+                <td><a href="/product/{{product._id}}">{{product.title}}</a></td>
+                <td>{{quantity}}</td>
+                <td>${{product.price}}</td>
+              </tr>
+            {{/each}}
+          </tbody>
+        </table>
+      </div>
 
-    {{#each order.successProducts}}
-      <tr class="align-middle">
-        <td><a href="/product/{{product._id}}">{{product.title}}</a></td>
-        <td>{{quantity}}</td>
-      </tr>
-    {{/each}}
+    </div>
+    <div class="col-3 d-flex align-items-center justify-content-end">
+      <div class="my-3">
+        <div class="d-flex flex-column align-items-end">
+          <h3 class="text-muted">Total amount:</h3>
+          <h2>${{order.totalAmount}}</h2>
+        </div>
+      </div>
 
-  </tbody>
-</table>
-
-<div class="my-3">
-  <div class="d-flex flex-column align-items-end">
-    <h3 class="text-muted">Total amount:</h3>
-    <h2>${{order.totalAmount}}</h2>
+    </div>
   </div>
 </div>
+
 <div class="d-flex justify-content-end p-2 m-3">
   <div>
     <a href="/products?page={{prevPage}}" class="btn btn-warning">Return</a>
