--- a/15-tercera_practica_integradora/src/views/restore.hbs
+++ b/15-tercera_practica_integradora/src/views/restore.hbs
@@ -10,7 +10,7 @@
               <!-- Email input -->
               <div class="form-outline mb-4">
                 <input type="email" id="email" class="form-control" name="email" placeholder="joe@doe.com" required />
-                <label class="form-label" for="email">Email address</label>
+                <label class="form-label" for="email">Email address*</label>
               </div>
 
               <!-- Submit button -->
