--- a/18-cuarta_practica_integradora/src/views/products.hbs
+++ b/18-cuarta_practica_integradora/src/views/products.hbs
@@ -61,7 +61,7 @@
               <div class="form-group row mt-2">
                 <div class="col">
                   <label for="thumbnails">Thumbnails*</label>
-                  <input type="file" name="thumbnails" multiple="true" class="form-control" id="thumbnails" enctype="multipart/form-data" autofocus required />
+                  <input type="file" name="thumbnails" multiple="true" class="form-control" id="thumbnails" enctype="multipart/form-data" accept=".jpg, .png, .gif, .webp" required />
                 </div>
               </div>
               <div class="form-group row mt-3">
