--- a/18-cuarta_practica_integradora/src/views/profile.hbs
+++ b/18-cuarta_practica_integradora/src/views/profile.hbs
@@ -4,9 +4,11 @@
       <div class="col-md-12 col-xl-4">
         <div class="card h-100" style="border-radius: 15px;">
           <div class="card-body text-center">
-            <div class="mt-3 mb-4">
-              <img src="{{thumbnails}}" class="rounded-circle img-fluid" style="width: 100px;" />
+
+            <div class="mt-3 mb-4" id="profilePictureContainer" data-userid="{{userId}}">
+              <img src="{{profilePicture}}" class="rounded-circle img-fluid" style="width: 100px;" id="profilePicturePreview" />
             </div>
+
             <h4 class="mb-2">{{user.name}}</h4>
             <p class="text-muted mb-4"><a href="#!">{{user.email}}</a></p>
             <p class="text-muted mb-4">Role: {{role}}</p>
